# AlayaLite

./: .clang-tidy  .gitignore  .typo.toml  CMakeLists.txt  MANIFEST.in  README.md  environment.yaml  pyproject.toml  setup.py
.github/workflows/: format_check.yaml  ruff.yaml
build_support/: build_pypi_wheel.sh  ci_script.sh  cpplint.py  gnu_codecoverage.sh  license_scipt.py  llvm_codecoverage.sh  pyinstall.sh  run_clang_format.py  run_clang_tidy.py  run_clang_tidy_extra.py
examples/rag/: Dockerfile  README.md  db.py  llm.py  test_docs.txt  ui.py  utils.py
examples/rag/.devcontainer/: devcontainer.json
include/executor/: scheduler.hpp  task_queue.hpp  worker.hpp
include/executor/jobs/: graph_search_job.hpp  graph_update_job.hpp  job_context.hpp
include/index/: index_type.hpp  neighbor.hpp
include/index/graph/: fusion_graph.hpp  graph.hpp  graph_concepts.hpp  overlay_graph.hpp
include/index/graph/hnsw/: hnsw_builder.hpp  hnswlib.hpp  visited_list_pool.hpp
include/index/graph/knng/: nndescent.hpp
include/index/graph/nsg/: nsg_builder.hpp
include/space/: raw_space.hpp  space_concepts.hpp  sq4_space.hpp  sq8_space.hpp
include/space/distance/: dist_config.hpp  dist_ip.hpp  dist_l2.hpp
include/space/quant/: sq4.hpp  sq8.hpp
include/storage/: sequential_storage.hpp  storage_concept.hpp
include/utils/: data_utils.hpp  evaluate.hpp  io_utils.hpp  locks.hpp  log.hpp  memory.hpp  metric_type.hpp  prefetch.hpp  quantization_type.hpp  query_utils.hpp  random.hpp  thread_pool.hpp  timer.hpp  types.hpp
pyalaya/: CMakeLists.txt  README.md
pyalaya/alayalite/: Dockerfile  config.yml  libstdc++.so.6  module.py
pyalaya/include/: client.hpp  dispatch.hpp  index.hpp  params.hpp  reg.hpp
pyalaya/src/: __init__.py  client.py  collection.py  common.py  defaults.py  index.py  pybind.cpp  schema.py  utils.py
pyalaya/src/rag/chunker/: Chunker.py  FixSizeChunker.py  SemanticChunker.py  SentenceChunker.py  __init__.py  base.py
pyalaya/src/rag/embedder/: BgeEmbedder.py  JinaEmbedder.py  M3eEmbedder.py  MultilingualEmbedder.py  __init__.py  base.py  embedder.py
pyalaya/tests/: test_client.py  test_collection.py  test_index_types.py  test_update.py
tests/: CMakeLists.txt
tests/executor/: CMakeLists.txt  coro_test.cpp  mutex_test.cpp  scheduler_test.cpp  search_test.cpp  task_queue_test.cpp  update_test.cpp  worker_test.cpp
tests/index/: CMakeLists.txt  fusion_graph_test.cpp  graph_test.cpp  hnsw_test.cpp  nndescent_test.cpp  nsg_test.cpp
tests/space/: CMakeLists.txt  raw_space_test.cpp  sq4_space_test.cpp  sq8_space_test.cpp
tests/space/quant/: sq4_test.cpp  sq8_test.cpp
tests/storage/: CMakeLists.txt  sequential_storage_test.cpp
tests/utils/: CMakeLists.txt  data_utils_test.cpp  evaluate_test.cpp  log_test.cpp  metric_type_test.cpp  query_utils_test.cpp
