[build-system]
requires = [
    "setuptools>=59.6",
    "pybind11>=2.10.0",
    "cmake>=3.1",
    "wheel",
    "ninja",
]
build-backend = "setuptools.build_meta"
[project.optional-dependencies]
dev = ["pytest", "ruff"]

[project]
name = "alayalite"
version = "0.1.0a1"

description = "AlayaLite Python extension module"
readme = "pyalaya/README.md"
requires-python = ">=3.9"
license = { file = "LICENSE" }
dependencies = [
    "pandas>=1.3.3",
]
authors = [{ name = "AlayaDB.AI", email = "dev@alayadb.ai" }]

[tool.setuptools]
package-dir = { "" = "pyalaya/src" } # Manually specify the packages to include

[tool.uv]
dev-dependencies = ["pytest>=8.3.5", "ruff>=0.11.0"]

# https://beta.ruff.rs/docs/settings/
[tool.ruff]
line-length = 120
# Exclude a variety of commonly ignored directories.
respect-gitignore = true
extend-exclude = ["build_support"]

[tool.ruff.lint]
select = [
    "E",      # pycodestyle errors
    "W",      # pycodestyle warnings
    "F",      # pyflakes
    "I",      # isort
    "B",      # flake8-bugbear
    "C4",     # flake8-comprehensions
    "UP",     # pyupgrade
    "ARG001", # unused arguments in functions
]
ignore = [
    "E501",  # line too long, handled by black
    "B008",  # do not perform function calls in argument defaults
    "W191",  # indentation contains tabs
    "B904",  # Allow raising exceptions without from e, for HTTPException
    "UP006", # Allow using `f"{x=}"` for debugging
    "UP035", # Allow deprecated module
]

[tool.ruff.lint.pyupgrade]
# Preserve types, even if a file imports `from __future__ import annotations`.
keep-runtime-typing = true
